--- a/client/submit.css
+++ b/client/submit.css
@@ -5,3 +5,8 @@
 .well h1 {
     margin-top: 0px;
 }
+
+.form-horizontal-checkbox {
+    margin-left: 0px !important;
+    margin-top: -3px !important;
+}
