--- a/client/submit.css
+++ b/client/submit.css
@@ -2,11 +2,6 @@
     padding-top: 7px;
 }
 
-.well h1 {
-    margin-top: 0px;
-}
-
-.form-horizontal-checkbox {
-    margin-left: 0px !important;
-    margin-top: -3px !important;
+.checkbox-inline {
+  padding-top: 0px !important;
 }
